# MCX-Denoising-Pytorch

./: LICENSE  README.md  analyze-3d.py  analyze-cross-section.py  analyze-global-metrics.py  analyze.py  config.py  loss.py  model-inference.py  model.py  model_inference.py  profile-filter.py  profile_filter.py  requirements.txt  test.py  train-lightning.py  train.py  visualize_results.py  visualize_results_real.py
configs/: cascaded.yaml  dncnn.yaml  drunet.yaml  unet.yaml
configs/2D/analysis/: absorb-100x100.yaml  absorb-128x128.yaml  absorb-64x64.yaml  homo-100x100.yaml  homo-128x128.yaml  homo-64x64.yaml  refractive-100x100.yaml  refractive-128x128.yaml  refractive-64x64.yaml
configs/2D/blind-denoising/: cascaded.yaml  dncnn.yaml  drunet.yaml  resmcnet.yaml  unet.yaml
configs/2D/loss-function/: mae+ssim.yaml  mae.yaml  mse+ssim.yaml  mse.yaml  psnr.yaml  ssim.yaml
configs/2D/visualization/: colin27.yaml  digimouse.yaml  square-100x100.yaml  square-128x128.yaml  square-64x64.yaml  usc-195.yaml
configs/3D/analysis/: absorb-100x100x100.yaml  absorb-128x128x128.yaml  absorb-64x64x64.yaml  colin27.yaml  digimouse.yaml  homo-100x100x100.yaml  homo-128x128x128.yaml  homo-64x64x64.yaml  refractive-100x100x100.yaml  refractive-128x128x128.yaml  refractive-64x64x64.yaml  use195.yaml
configs/3D/blind-denoising/: cascaded.yaml  dncnn.yaml  drunet.yaml  resmcnet.yaml  unet.yaml
configs/3D/loss-function/: mae+ssim.yaml  mae.yaml  mse+ssim.yaml  mse.yaml  psnr.yaml  ssim.yaml
configs/3D/visualization/: absorb-100x100x100.yaml  colin27.yaml  digimouse.yaml  homo-100x100x100.yaml  lens.yaml  refractive-100x100x100.yaml  square-100x100x100.yaml  square-128x128x128.yaml  square-64x64x64.yaml  square-test.yaml  square-train.yaml  usc-195.yaml
configs/Activation Function/: 3D-x1e5-ReLU.yaml  3D-x1e5-Unity.yaml
configs/Cascaded/: train.yaml
configs/Cascaded/2D/: test_3d.yaml  train.yaml
configs/Cascaded/3D/: train.yaml
configs/DRUNet/: train.yaml
configs/DnCNN/: train.yaml
configs/Loss Function/: 3D-x1e5-MAE+SSIM.yaml  3D-x1e5-MAE.yaml  3D-x1e5-MSE+SSIM.yaml  3D-x1e5-MSE.yaml  3D-x1e5-SSIM.yaml
configs/ResidualDnCNN/: train.yaml
configs/UNet/: train.yaml
configs/UNet/2D/: train.yaml
configs/UNet/3D/: train.yaml
configs/analysis/: 2D.yaml  3D-64x64x64.yaml  3D-template.yaml
data/: convert_leiming.py  createrandimg.m  dataset.py  genImage_osa_1e5_inclusion.m  genImage_osa_1e5_to_1e8.m  genImage_osa_1e9.m  generate_data.m  plot_rand_mcx.m  rand_2d_mcx.m  rand_2d_mcx_leiming.m  random_2d_volume.m  random_number_in_2d_volume.m  random_polygon_in_2d_volume.m  random_shape_volume.m  visualization.py
data/augmentation/: __init__.py  augmentor.py  composition.py  flip.py  rotation.py
data/generate/: benchmark_mcx.m  generate_data.m  generate_data.sh  generate_data_using_cfg_lambda.m
data/generate/2D/: benchmark.m  generate_2d_benchmarks.m  generate_2d_train_data.m  generate_benchmarks.m  generate_data.m  generate_random_2d_cfg.m  get_2d_colin27_cfg.m  get_2d_cube_benchmark_cfg.m  get_2d_digimouse_cfg.m  get_2d_usc195_cfg.m  plot_rand_mcx.m  rand_2d_mcx.m  random_number_in_2d_volume.m  random_polygon_in_2d_volume.m  random_train_2d_cfg.m
data/generate/3D/: benchmark.m  generate_3d_benchmarks.m  generate_3d_train_data.m  generate_benchmarks.m  generate_data.m  generate_random_cfg.m  get_3d_colin27_cfg.m  get_3d_cube_benchmark_cfg.m  get_3d_digimouse_cfg.m  get_3d_usc195_cfg.m  rand_3d_mcx.m  random_3d_volume.m  random_number_in_3d_volume.m  random_polygon_in_3d_volume.m  random_train_3d_cfg.m
data/generate/common/: generate_data_using_cfg_lambda.m
evaluation/: apply_bm4d+nlm.py  benchmark_anlm.m  benchmark_anlm_on_all_datasets.m  benchmark_bm4d+nlm.py  benchmark_bm4d+nlm_on_all_datasets.sh  benchmark_bm4d.py  benchmark_nlm.py  model_inference.py  profile_anlm.m  profile_filter.py  test.py  utils.py
evaluation/scripts/: absorb-128x128.sh  absorb-128x128x128.sh  absorb-64x64.sh  absorb-64x64x64.sh  colin27.sh  digimouse.sh  homo-128x128.sh  homo-128x128x128.sh  homo-64x64.sh  homo-64x64x64.sh  refractive-128x128.sh  refractive-128x128x128.sh  refractive-64x64.sh  refractive-64x64x64.sh  use195.sh
evaluation/scripts/bm4d/: absorb-128x128.sh  absorb-128x128x128.sh  absorb-64x64.sh  absorb-64x64x64.sh  colin27-2D.sh  colin27.sh  digimouse-2D.sh  digimouse.sh  homo-128x128.sh  homo-128x128x128.sh  homo-64x64.sh  homo-64x64x64.sh  refractive-128x128.sh  refractive-128x128x128.sh  refractive-64x64.sh  refractive-64x64x64.sh  usc195-2D.sh  usc195.sh
evaluation/scripts/nlm/: absorb-128x128.sh  absorb-128x128x128.sh  absorb-64x64.sh  absorb-64x64x64.sh  colin27-2D.sh  colin27.sh  digimouse-2D.sh  digimouse.sh  homo-128x128.sh  homo-128x128x128.sh  homo-64x64.sh  homo-64x64x64.sh  refractive-128x128.sh  refractive-128x128x128.sh  refractive-64x64.sh  refractive-64x64x64.sh  usc195-2D.sh  usc195.sh  use195-2D.sh  use195.sh
matlab/: mcxfilter.mex  mcxfilter.mexa64
matlab/image-2.12.0/: INDEX  NEWS
matlab/image-2.12.0/inst/: cp2tform.m  imlincomb.m  imremap.m  imresize.m  imrotate.m  regionprops.m  viscircles.m
matlab/image-2.12.0/src/: Makefile.in  __bilateral__.cc  __boundary__.cc  __eps__.cc  __spatial_filtering__.cc  bwconncomp.cc  bwdist.cc  bwfill.cc  bwlabeln.cc  conndef.cc  connectivity.cc  graycomatrix.cc  hough_line.cc  im2double.m.in  imerode.cc  intlut.cc  (+7 more)
model/: __init__.py  builder.py  initialization.py  layers.py  loss.py  model.py
octave/: make_path_list.m  octave.py
octave/image-2.12.0/: octave-image.metainfo.xml
octave/image-2.12.0/src/: __custom_gaussian_smoothing__.cc  aclocal.m4  config.h.in  configure  configure.ac  connectivity.h  octave-wrappers.h  strel.h
onnx/: export_model.py  inference.cpp  inference.cu  inference.cuh  inference.h
sbatch/: submit_cascaded.sh  submit_dncnn.sh  submit_drunet.sh  submit_resdncnn.sh  submit_unet.sh
sbatch/Activation Function/: relu.sh  unity.sh
sbatch/Loss Function/: mae.sh  mse.sh  ssim+mae.sh  ssim+mse.sh  ssim.sh
solver/: builder.py  lars.py  lr_scheduler.py
training/: train.py
(+255 files in other folders)
